assignments/3-have-fun/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assignment3-app
  namespace: lwsn
  labels:
    app: assignment3-app
spec:
  # Set the number of replicas to test scaling behavior
  replicas: 1
  selector:
    matchLabels:
      app: assignment3-app
  template:
    metadata:
      labels:
        app: assignment3-app
    spec:
      containers:
        - name: assignment3-app
          # Replace with your ECR image. Format:
          image: 289831833738.dkr.ecr.eu-north-1.amazonaws.com/assignment3/lwsn:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.1"
            limits:
              memory: "256Mi"
              cpu: "0.2"

          # Add readiness probe to ensure the pod is ready to receive traffic
          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10

          # Add liveness probe to ensure the application is healthy
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
