assignments/3-have-fun/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: assignment3-app
  namespace: lwsn
spec:
  # Choose the appropriate service type (ClusterIP is recommended for this setup)
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: assignment3-app
